--- a/index.html
+++ b/index.html
@@ -1,84 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Memory Code</title>
-        <link rel="stylesheet" href="./css/styles.css">
-      </head>
-      <body>
-        <div>
-          <canvas id="intro" width="1430" height="60"></canvas>
-          <h1>Memory Code</h1>
-        </div>
-        <div class="buttons">
-          <button class="start">Start Game</button>
-          <button class="restart">Start again</button>
-        </div>
-        <div id="instructions">
-          <canvas id="intro2" width="430" height="100"><h3>Instructions</h3></canvas>
-        </div>
-        <div id="score">
-          <h2>Score</h2>
-          <p>Points: <span id="pairs-clicked">0</span></p>
-        </div>
-        <div id="memory-board">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Memory Code</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <div class="splash">
+      <h3 class="fade-in">
+        Choose the matching card from the board! You have one second to see the
+        cards!
+      </h3>
+    </div>
+    <div>
+      <canvas id="intro" width="1430" height="60"></canvas>
+      <h1>Memory Code</h1>
+    </div>
+    <div id="game-container">
+      <div class="buttons">
+        <button class="start">Start Game</button>
+      </div>
+      <div id="score">
+        <h2>Score</h2>
+        <p>Points: <span id="pairs-clicked">0</span></p>
+      </div>
+      <div id="memory-board">
         <div class="memory-cards" data-name="Bash">
-          <img class="front-face" src="images/Bash.png" alt="Bash">
-          <p class="back-face" ><span id="number-one-card"></span></p> 
+          <img class="front-face" src="images/Bash.png" alt="Bash" />
+          <p class="back-face"><span id="number-one-card"></span></p>
         </div>
         <div class="memory-cards" data-name="C++">
-         <img class="front-face" src="images/c++.png" alt="C++">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/c++.png" alt="C++" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Chrome">
-          <img class="front-face" src="images/Chrome.png" alt="Chrome">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/Chrome.png" alt="Chrome" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Css">
-          <img class="front-face" src="images/css.png" alt="Css">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/css.png" alt="Css" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="git">
-          <img class="front-face" src="images/git.png" alt="git">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/git.png" alt="git" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="gitHub">
-          <img class="front-face" src="images/github.png" alt="gitHub">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/github.png" alt="gitHub" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Html">
-          <img class="front-face" src="images/html.png" alt="Html">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/html.png" alt="Html" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Java">
-          <img class="front-face" src="images/Java.png" alt="Java">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/Java.png" alt="Java" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Javascript">
-          <img class="front-face" src="images/Javascript.png" alt="Javascript">
-          <p1 class="back-face" ></p1> 
+          <img
+            class="front-face"
+            src="images/Javascript.png"
+            alt="Javascript"
+          />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Python">
-          <img class="front-face" src="images/Python.png" alt="Python">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/Python.png" alt="Python" />
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="Ruby">
-          <img class="front-face" src="images/ruby.png" alt="Ruby">
-          <p1 class="back-face" ></p1> 
+          <img class="front-face" src="images/ruby.png" alt="Ruby" />
+          <p1 class="back-face"></p1>
         </div>
-        <div class="memory-cards"data-name="Visual Studio Code">
-          <img class="front-face" src="images/VSC.png" alt="Visual Studio Code">
-          <p1 class="back-face" ></p1> 
+        <div class="memory-cards" data-name="Visual Studio Code">
+          <img
+            class="front-face"
+            src="images/VSC.png"
+            alt="Visual Studio Code"
+          />
+          <p1 class="back-face"></p1>
         </div>
-        </div>
-        <div id= "memory-board2">
-        <div id="card-to-guess"> </div>
       </div>
-     
-      <script src="./js/game.js"></script>
+      <div id="memory-board2">
+        <div id="card-to-guess"></div>
+      </div>
+    </div>
+    <div class="winner hidden">
+      <h4> Congratulations! You won!</h4>
+    </div>
+    <div class="loser hidden">
+      <h5>You lost :( Try again!</h5>
+   <button class="restart">Start again</button>
+    </div>
+    <script src="./js/splash.js"></script>
+    <script src="./js/game.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/canvas.js"></script>
-      </body>
+  </body>
 </html>
