--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="memory-board">
         <div class="memory-cards" data-name="Bash">
           <img class="front-face" src="images/Bash.png" alt="Bash" />
-          <p class="back-face"><span id="number-one-card"></span></p>
+          <p1 class="back-face"></p1>
         </div>
         <div class="memory-cards" data-name="C++">
           <img class="front-face" src="images/c++.png" alt="C++" />
