update level two

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="game-container">
       <div class="buttons">
         <button class="start">Start Game</button>
+        
       </div>
       <div id="score">
         <h2>Score</h2>
@@ -90,6 +91,7 @@
     </div>
     <div class="winner hidden">
       <h4> Congratulations! You won!</h4>
+      <button class="startLevelTwo">Start next level</button>
     </div>
     <div class="loser hidden">
       <h5>You lost :( Try again!</h5>
